Bug 153617 - '%' disables LanguageTool spell checking
Summary: '%' disables LanguageTool spell checking
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Linguistic (show other bugs)
Version:
(earliest affected)
7.4.0.3 release
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:7.6.0 target:7.5.2
Keywords:
Depends on:
Blocks:
 
Reported: 2023-02-14 17:05 UTC by documentfoundation.ruttish
Modified: 2023-03-08 19:25 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description documentfoundation.ruttish 2023-02-14 17:05:38 UTC
Description:
Whenever there is '%' present in a paragraph, spell checking via LanguageTool isn't working any more. LanguageTool is set up in LO's settings (premium account).

I also reported the bug to the forum[1] but I wanted to create a bug report here as well to when the bug is fixed.

[1] https://forum.languagetool.org/t/deaktiviert-prufung-in-libreoffice/8485/1

Steps to Reproduce:
1. Create new text document
2. Write a text with spelling mistakes and a '%' sign


Actual Results:
Right-clicking spelling mistakes doesn't show correction

Expected Results:
Right-clicking spelling mistakes does show correction


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.4.5.1 / LibreOffice Community
Build ID: 40(Build:1)
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: de-DE (en_US.UTF-8); UI: en-US
7.4.5-1
Calc: threaded
Comment 1 Mike Kaganski 2023-03-04 09:51:59 UTC
https://gerrit.libreoffice.org/c/core/+/148236
Comment 2 Commit Notification 2023-03-04 14:19:22 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/43dcdfae40c9c37032ed5e92cd0634feb53b706d

tdf#153617: percent-encode the text sent to LanguageTool API.

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2023-03-08 19:25:39 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/3b17f67f35a771c75e683f0671b9b9d2a010ffd4

tdf#153617: percent-encode the text sent to LanguageTool API.

It will be available in 7.5.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.