tdf#153617: percent-encode the text sent to LanguageTool API.

Change-Id: I0bb55c70f5602444440fca6e3c13b3d75418e49d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/148236
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/148299