lingucomponent/source/spellcheck/languagetool/languagetoolimp.cxx
@@ -41,6 +41,7 @@
 #include <tools/long.hxx>
 #include <com/sun/star/uno/Any.hxx>
 #include <comphelper/propertyvalue.hxx>
+#include <rtl/uri.hxx>
 
 using namespace osl;
 using namespace com::sun::star;
@@ -72,6 +73,20 @@ Sequence<PropertyValue> lcl_GetLineColorPropertyFromErrorId(const std::string& r
     }
     Sequence<PropertyValue> aProperties{ comphelper::makePropertyValue("LineColor", aColor) };
     return aProperties;
+}
+
+OString encodeTextForLanguageTool(const OUString& text)
+{
+    // Let's be a bit conservative. I don't find a good description what needs encoding (and in
+    // which way) at https://languagetool.org/http-api/; the "Try it out!" function shows that
+    // different cases are handled differently by the demo; some percent-encode the UTF-8
+    // representation, like %D0%90 (for cyrillic А); some turn into entities like &#33; (for
+    // exclamation mark !); some other to things like \u0027 (for apostrophe ').
+    static constexpr auto myCharClass
+        = rtl::createUriCharClass("0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz");
+    return OUStringToOString(
+        rtl::Uri::encode(text, myCharClass.data(), rtl_UriEncodeStrict, RTL_TEXTENCODING_UTF8),
+        RTL_TEXTENCODING_ASCII_US);
 }
 }
 
@@ -215,9 +230,8 @@ ProofreadingResult SAL_CALL LanguageToolGrammarChecker::doProofreading(
     xRes.nBehindEndOfSentencePosition
         = std::min(xRes.nStartOfNextSentencePosition, aText.getLength());
 
-    OUString langTag(aLocale.Language + "-" + aLocale.Country);
-    OString postData = OUStringToOString(Concat2View("text=" + aText + "&language=" + langTag),
-                                         RTL_TEXTENCODING_UTF8);
+    OString langTag(LanguageTag::convertToBcp47(aLocale, false).toUtf8());
+    OString postData = "text=" + encodeTextForLanguageTool(aText) + "&language=" + langTag;
 
     if (auto cachedResult = mCachedResults.find(postData); cachedResult != mCachedResults.end())
     {
